--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@
 # app
 aiohttp==3.5.4
 couchbase
+trafaret-config
+dataclasses_json
+
+
+# utils
 future
 uuid
 
 
 # compatibility
 six
-dataclasses_json
