--- a/config/users_test.yaml
+++ b/config/users_test.yaml
@@ -1,9 +1,10 @@
 couchbase:
   bucket: users_test
+  collection: users_test_collection
   user: users_test
   password: users_test_pass
   host: http://couchbase
   port: 8091
 
-host: 127.0.0.1
+host: 0.0.0.0
 port: 8083
