--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '2.3'
 services:
 
-#  test:
-#    build:
-#      context: ./
-#      dockerfile: ./tests/Dockerfile
-#    ports:
-#      - "8083:8083"
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "localhost:8080"]
-#    depends_on:
-#      - couchbase
+  test:
+    build:
+      context: ./
+      dockerfile: ./tests/functionality/Dockerfile
+    ports:
+      - "8083:8083"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "localhost:8083"]
+    depends_on:
+      - couchbase
 
   app:
     build: ./
